[package]
name = "ht"
authors = ["FX | x.com => @a_ix_d"]
description = "The HypeTerminal Program"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
no-entrypoint = []

[dependencies]
anchor-lang = {version = "0.30.1", features= ["init-if-needed"]}
anchor-spl = "0.30.1"
streamflow-sdk = {version = "0.7", features = ["cpi", "devnet"]}

[lib]
crate-type = ["cdylib", "lib"]
